feat: update product routes
