# swagger/v1/swagger.yaml
@@ -8,15 +8,15 @@ paths:
     get:
       summary: list categories
       tags:
-        - Category
+      - Category
       responses:
         '200':
           description: successful
     post:
       summary: create category
       tags:
-        - Category
-      parameters: [ ]
+      - Category
+      parameters: []
       responses:
         '201':
           description: category created
@@ -33,63 +33,63 @@ paths:
                 name:
                   type: string
               required:
-                - name
+              - name
   "/categories/{id}":
     parameters:
-      - name: id
-        in: path
-        description: id
-        required: true
-        schema:
-          type: string
+    - name: id
+      in: path
+      description: id
+      required: true
+      schema:
+        type: string
     get:
       summary: show category
       tags:
-        - Category
+      - Category
       responses:
         '200':
           description: successful
     patch:
       summary: update category
       tags:
-        - Category
+      - Category
       responses:
         '200':
           description: successful
     put:
       summary: update category
       tags:
-        - Category
+      - Category
       responses:
         '200':
           description: successful
     delete:
       summary: delete category
       tags:
-        - Category
+      - Category
       responses:
         '200':
           description: successful
   "/products/{product_id}/general_specifications":
     parameters:
-      - name: product_id
-        in: path
-        description: product_id
-        required: true
-        schema:
-          type: string
+    - name: product_id
+      in: path
+      description: product_id
+      required: true
+      schema:
+        type: string
     get:
       summary: list general_specifications
       tags:
-        - General Specification
+      - General Specification
       responses:
         '200':
           description: successful
     post:
       summary: create general_specification
       tags:
-        - General Specification
-      parameters: [ ]
+      - General Specification
+      parameters: []
       responses:
         '201':
           description: general specification created
@@ -108,63 +108,70 @@ paths:
                 general:
                   type: string
               required:
-                - release_date
-                - general
+              - release_date
+              - general
   "/products/{product_id}/general_specifications/{id}":
     parameters:
-      - name: product_id
-        in: path
-        description: product_id
-        required: true
-        schema:
-          type: string
-      - name: id
-        in: path
-        description: id
-        required: true
-        schema:
-          type: string
+    - name: product_id
+      in: path
+      description: product_id
+      required: true
+      schema:
+        type: string
+    - name: id
+      in: path
+      description: id
+      required: true
+      schema:
+        type: string
     get:
       summary: show general_specification
       tags:
-        - General Specification
+      - General Specification
       responses:
         '200':
           description: successful
     patch:
       summary: update general_specification
       tags:
-        - General Specification
+      - General Specification
       responses:
         '200':
           description: successful
     put:
       summary: update general_specification
       tags:
-        - General Specification
+      - General Specification
       responses:
         '200':
           description: successful
     delete:
       summary: delete general_specification
       tags:
-        - General Specification
+      - General Specification
       responses:
         '200':
           description: successful
-  "/products":
+  "/categories/{category_id}/products":
+    parameters:
+    - name: category_id
+      in: path
+      description: category_id
+      required: true
+      schema:
+        type: string
     get:
       summary: list products
       tags:
-        - Product
+      - Product
       responses:
         '200':
           description: successful
     post:
       summary: create product
       tags:
-        - Product
-      parameters: [ ]
+      - Product
+      parameters: []
       responses:
         '201':
           description: product created
@@ -181,40 +188,46 @@ paths:
                 name:
                   type: string
               required:
-                - name
-  "/products/{id}":
+              - name
+  "/categories/{category_id}/products/{id}":
     parameters:
-      - name: id
-        in: path
-        description: id
-        required: true
-        schema:
-          type: string
+    - name: category_id
+      in: path
+      description: category_id
+      required: true
+      schema:
+        type: string
+    - name: id
+      in: path
+      description: id
+      required: true
+      schema:
+        type: string
     get:
       summary: show product
       tags:
-        - Product
+      - Product
       responses:
         '200':
           description: successful
     patch:
       summary: update product
       tags:
-        - Product
+      - Product
       responses:
         '200':
           description: successful
     put:
       summary: update product
       tags:
-        - Product
+      - Product
       responses:
         '200':
           description: successful
     delete:
       summary: delete product
       tags:
-        - Product
+      - Product
       responses:
         '200':
           description: successful
@@ -222,15 +235,15 @@ paths:
     get:
       summary: list reviews
       tags:
-        - Review
+      - Review
       responses:
         '200':
           description: successful
     post:
       summary: create review
       tags:
-        - Review
-      parameters: [ ]
+      - Review
+      parameters: []
       responses:
         '201':
           description: review created
@@ -253,47 +266,47 @@ paths:
                 product_id:
                   type: string
               required:
-                - title
-                - body
-                - rate
+              - title
+              - body
+              - rate
   "/reviews/{id}":
     parameters:
-      - name: id
-        in: path
-        description: id
-        required: true
-        schema:
-          type: string
+    - name: id
+      in: path
+      description: id
+      required: true
+      schema:
+        type: string
     get:
       summary: show review
       tags:
-        - Review
+      - Review
       responses:
         '200':
           description: successful
     patch:
       summary: update review
       tags:
-        - Review
+      - Review
       responses:
         '200':
           description: successful
     put:
       summary: update review
       tags:
-        - Review
+      - Review
       responses:
         '200':
           description: successful
     delete:
       summary: delete review
       tags:
-        - Review
+      - Review
       responses:
         '200':
           description: successful
 servers:
-  - url: http://{defaultHost}
-    variables:
-      defaultHost:
-        default: localhost:3000
+- url: http://{defaultHost}
+  variables:
+    defaultHost:
+      default: localhost:3000
